# spaceship-cpp

./: .ycm_extra_conf.py  Bullet.cpp  Bullet.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ReadMe.txt  Sound.cpp  Sound.h  SpaceShip  SpaceShip2.cbp  allegro_includes.h  asteroid.cpp  asteroid.h  asteroids_engine.cpp  asteroids_engine.h  bitmap.cpp  bitmap.h  bullet.cpp  bullet.h  changelog.txt  cmake_install.cmake  game.cpp  game.h  gun.cpp  gun.h  itoa.h  keyboard.cpp  keyboard.h  lifes.cpp  lifes.h  linked_list.cpp  linked_list.h  main.back2.cpp  main.cpp  nave.cpp  nave.h  set_of_asteroids.cpp  set_of_asteroids.h  (+3 more)
allegro_libs/: liballegro.so.5.2.1  liballegro_audio.so.5.2.1  liballegro_color.so.5.2.1  liballegro_physfs.so.5.2.1  liballegro_video.so.5.2.1
bitmap_interfaces/: asteroids_interface.cpp  asteroids_interface.h  bullet_interface.cpp  bullet_interface.h  game_facade.cpp  game_facade.h  hearts_interface.cpp  hearts_interface.h  power_up_interface.cpp  power_up_interface.h  powerups_interface.cpp  powerups_interface.h
bitmap_objects/: asteroid.cpp  asteroid.h  bitmap.cpp  bitmap.h  bullet.cpp  bullet.h  heart.cpp  heart.h  image.cpp  image.h  nave.cpp  nave.h  power_up.cpp  power_up.h
game_interfaces/: keyboard.cpp  keyboard.h  main_game.cpp  main_game.h
libs/: liballegro_acodec.so.5.2.1  liballegro_dialog.so.5.2.1  liballegro_font.so.5.2.1  liballegro_image.so.5.2.1  liballegro_main.so.5.2.1  liballegro_memfile.so.5.2.1  liballegro_primitives.so.5.2.1  liballegro_ttf.so.5.2.1
resources/: SpaceShip
src/: Asteroid.cc  AsteroidFactory.cc  AsteroidInterface.cc  AsteroidObjectPool.cc  Bitmap.cc  Hearth.cc  Image.cc  Keyboard.cc  MainGame.cc  MiscTool.cc  Nave.cc  PowerUp.cc  Proyectile.cc  ProyectileObjectPool.cc  RandomTool.cc  ScoreInterface.cc  SpaceShip.cc  StringTool.cc
src/inc/: Asteroid.h  AsteroidFactory.h  AsteroidInterface.h  AsteroidObjectPool.h  Bitmap.h  Hearth.h  Image.h  Keyboard.h  MainGame.h  MiscTool.h  Nave.h  PowerUp.h  Proyectile.h  ProyectileObjectPool.h  Random.h  ScoreInterface.h  SpaceShipIncludes.h  StringTool.h
strategys/: strategy_nave_gun.cpp  strategy_nave_gun.h  strategy_power_up.cpp  strategy_power_up.h
tools_and_headers/: int_to_string.cpp  int_to_string.h  spaceship_includes.h
